name:                maybe-hero
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/maybe-hero#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  other-modules:       MaybeHero.World
                     , MaybeHero.Command
                     , MaybeHero.Input
                     , MaybeHero.Room
                     , MaybeHero.Rooms
                     , MaybeHero.Scenery
                     , MaybeHero.Utils
                     , MaybeHero.WorldLoader
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , yaml-light
                     , bytestring
  default-language:    Haskell2010

executable maybe-hero-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , maybe-hero
  default-language:    Haskell2010

test-suite maybe-hero-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , maybe-hero
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/maybe-hero
